# QDiffX

./: CMakeLists.txt  LICENSE  README.md  main.cpp
.github/workflows/: build.yml
docs/: README.md
examples/: README.md
src/: DMPAlgorithm.cpp  DMPAlgorithm.h  DTLAlgorithm.cpp  DTLAlgorithm.h  LineNumberArea.cpp  LineNumberArea.h  QAlgorithmException.cpp  QAlgorithmException.h  QAlgorithmManager.cpp  QAlgorithmManager.h  QAlgorithmManagerError.h  QAlgorithmRegistry.cpp  QAlgorithmRegistry.h  QDiffAlgorithm.h  QDiffTextBrowser.cpp  QDiffTextBrowser.h  QDiffWidget.cpp  QDiffWidget.h  QLineNumberArea.cpp  QLineNumberArea.h  README.md
src/DMP/: diff_match_patch.cpp  diff_match_patch.h
src/dtl/: Diff.hpp  Diff3.hpp  Lcs.hpp  Sequence.hpp  Ses.hpp  dtl.hpp  functors.hpp  variables.hpp
tests/: CMakeLists.txt  README.md
tests/unit_tests/: tst_algorithm_manager.cpp
